--- a/StateSolution/StateLib/StateLib.csproj
+++ b/StateSolution/StateLib/StateLib.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClockSetup.cs" />
+    <Compile Include="IClock.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
