--- a/StateSolution/StateLib/StateLib.csproj
+++ b/StateSolution/StateLib/StateLib.csproj
@@ -40,7 +40,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClockSetup.cs" />
+    <Compile Include="DayState.cs" />
     <Compile Include="IClock.cs" />
+    <Compile Include="MonthState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="YearState.cs" />
   </ItemGroup>
